--- a/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
@@ -1767,6 +1767,11 @@ input.file {
 	width: 100%;
 }
 
+.estado_coleccion {
+	font-size: 10pt;
+	text-align: left;
+}
+
 .warning {
 	background-color: #990000;
 	height: 45px;
