--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -2,12 +2,10 @@
 <head>
   <meta http-equiv="Content-Tipo" content="text/html; charset=UTF-8">
 </head>
-<body onload="javascript:window.print();window.close();">
+
 
 <!--LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
-
-
-
+<body onload="javascript:window.print();window.close();">
 [% FOREACH comprobantes %]
     <div class="comprob">
         <p >PR&Eacute;STAMO - RENOVACI&Oacute;N</p>
@@ -162,6 +160,7 @@
               </table>
        
     </div>
+    <div  style= "page-break-after: always"></div>  
     <!-- PAGE BREAK -->    
 [% END %]
 
