--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaCampoVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaCampoVisualizacionOpac.tmpl
@@ -19,7 +19,7 @@
           tooltip   : EDITABLE_MSG,
           placeholder: EDITABLE_MSG,
           style   : 'display: inline',
-          submitdata : {token: "[% token %]", edit: 1, type: 'vista_campo'},
+          submitdata : {token: "[% token %]", edit: 1, type: 'vista_campo', nivel: $('#eleccion_nivel').val()},
           indicator : loaderPath,
 
     });
