--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -38,7 +38,7 @@
 	<!-- PARA PODER CREAR EL FORMULARIO -->
 	<div id="formulario"></div>
 	
-	<div id="detalleMARC"></div>
+	<div id="detalleMARC" style="display:none"></div>
 	
 	<div id="detalleComun">
 	
