--- a/opac/htdocs/opac-tmpl/opac-MARCdetail.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-MARCdetail.tmpl
@@ -1,32 +1,47 @@
 
-<p class="pagetitulo">Detalle MARC</p>
+ <script src="/includes/jquery/ui/tabs.min.js" type="text/javascript"></script>
+  <link media="screen" rel="stylesheet" href="/includes/jquery/ui/base/jquery.ui.tabs.css" type="text/css">
 
-<table class="zebra" cellspacing="0" cellpadding="0" border="0">
-	<tr class="tablaresultadoTitle">
+<script>
+	$(function() {
+		$( "#tabs" ).tabs();
+	});
+</script>
 
-		<td>&nbsp;</td>
-		<td>&nbsp;</td>
+<div class="detalle_marc">
 
-	</tr>
-</table>
+<div id="tabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all">
+	<ul>
+			<li><a href="#tabs-2">Detalle</a></li>
+		<li><a href="#tabs-1">Marc</a></li>
+	</ul>	
+	<div id="tabs-2">
+		<ul class="MARCResult">
+		[% FOREACH MARCDetail_array %]
 
-<!--*****************************************MARC DETAIL*****************************************************  -->
-<ul class="MARCResult">
-[% FOREACH MARCDetail_array %]
-
-	[% IF header %]
-	<li class="MARCHeader">
-		[% campo %]&nbsp;[% header %]
-	</li>
-		[% FOREACH info_campo_array %]
-			<li class="MARCDetalle">
-				[% subcampo %]&nbsp;[% liblibrarian %]: &nbsp;<b>[% dato %]</b>
-			</li>
+			[% IF info_campo_array.size > 0 %]
+				[% IF header %]
+				<li class="MARCHeader">
+					[% campo %]&nbsp;[% header %]
+				</li>
+					[% FOREACH info_campo_array %]
+						[% IF dato.remove('\s+') %]
+							<li class="MARCDetalle">
+								[% subcampo %]&nbsp;[% liblibrarian %]: &nbsp;<b>[% dato %]</b>
+							</li>
+						[% END %]
+					[% END %]
+				[% END %]  
+			[% END %]
 		[% END %]
-	[% END %]  
+		</ul>
+	</div>
+		<div id="tabs-1">
+		<pre>
+			[% detalle_marc %]
+		</pre>
+	</div>
 
-[% END %]
-</ul>
+</div>
 
-
-
+</div>
