impresion de prestamo interbibliotecario

--- a/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
@@ -47,7 +47,7 @@
             </table><br>
      
             [% "Lo(s) mismo(s) ser&aacute;n retirado(s) por: " | i18n  %]<br>
-            [% "Nombre y apellido: " | i18n  %]<span>[% socio.persona.nombre %], [% socio.persona.apellido %]</span><br>
+            [% "Nombre y apellido: " | i18n  %]<span>[% socio_nombre %], [% socio_apellido%]</span><br>
             [% "DNI: " | i18n  %][% socio.persona.nro_documento %]<br>
             [% "Direcci&oacute;n: " | i18n  %][% socio.persona.calle %], [% socio.persona.barrio %], [% socio.persona.ciudad_ref.nombre %]<br>
             [% "Tel&eacute;fono: " | i18n  %][% socio.persona.telefono %]<br>
