--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -8,21 +8,25 @@
 		</script>
 		
 		<fieldset>
-		    <legend class="trigger trigger_2_[% id2 %] click">[% "Anal&iacute;ticas del grupo" | i18n %] [% id2 %]</legend>
-		    <div id="ejemplaresDelGrupo[% id2 %]" class="analiticasDelGrupo[% id2 %]" >
-                    <ul class="listado_sin_margen">
+		    <legend class="trigger trigger_analiticas_[% id2 %] click">[% "Anal&iacute;ticas del grupo" | i18n %] [% id2 %]</legend>
+		    <div id="analiticasDelGrupo[% id2 %]" class="analiticasDelGrupo[% id2 %]" >
+				<ul class="listado_sin_margen"> 
+						<li></li>
                         [% FOREACH nivel1_analiticas_array %]
+                        <li>
+						<dl class="listado_sin_margen">  
                             [% FOREACH nivel1_analitica %]
                                 [% IF liblibrarian %]
                                     [% IF dato %]
-                                    <li> [% liblibrarian %]: <strong>[% dato %]</strong></li>
+                                    <dt> [% liblibrarian %]: <strong>[% dato %]</strong></dt>
                                     [% END %]
                                 [% END %]
-                            [% END %] <!-- END FOREACH nivel1_analiticas_array -->
-                            
-                        [% END %]  <!-- END FOREACH nivel2_analiticas_array -->      
-                    </ul>
-		    </div> <!--end <div id="ejemplaresDelGrupo -->
+                            [% END %] <!-- END FOREACH nivel1_analitica -->
+						</dl>
+						</li>
+                        [% END %]  <!-- END FOREACH nivel1_analiticas_array -->      
+                 </ul>
+		    </div> <!--end <div id="analiticasDelGrupo -->
 		</fieldset>
-		<script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
+		<script type="text/javascript">makeToggle('analiticasDelGrupo[% id2 %]','trigger_analiticas_[% id2 %]',null,true);</script>
   
