--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -392,9 +392,9 @@ function checkEstructuraCatalogacion(){
     objAH.obligatorio = ($('#obligatorio_si')[0].checked)?1:0;
 
     if (!isNaN(objAH.nivel)) {
-      if (objAH.nivel == 1)
-        objAH.itemtype= 'ALL';
-      else
+//       if (objAH.nivel == 1)
+//         objAH.itemtype= 'ALL';
+//       else
         objAH.itemtype= $('#tipo_nivel3_id').val();
 
       if (comboSeleccionado($('#campo')) && ok)
@@ -457,7 +457,7 @@ function agregarEstructuraCatalogacion(){
     objAH               = new AjaxHelper(updateAgregarEstructuraCatalogacion);
     objAH.debug         = true;
     objAH.showOverlay   = true;
-    objAH.url=URL_PREFIX+"/catalogacion/estructura/estructuraCataloDB.pl";
+    objAH.url           = URL_PREFIX+"/catalogacion/estructura/estructuraCataloDB.pl";
     objAH.nivel         = $('#niveles_id').val();
 
     ok                  = checkEstructuraCatalogacion();
