preferencia auto_generar_comprobante_prestamo

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -108,7 +108,7 @@ function updateMostrarHistorialDeSanciones(responseText){
 
 
 //*******************************Fin Para manejar el historial de sanciones************************************
-
+var AUTO_GENERAR_COMPROBANTE = '[% auto_generar_comprobante_prestamo %]';
 //************************************Para manejar la circulacion**********************************************
 //REDEFINIDO, se encuentra en circulacion.js
 function updateInfoRenovar(responseText){
