--- a/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
@@ -1485,6 +1485,7 @@ ul.listado_a_izquierda {
 
 .listaMenuBotones li {
 	width: 100%;
+	margin-left: 7px;
 }
 
 .listaCondicionesHorizontales {
@@ -1633,6 +1634,7 @@ fieldset.accionesUsuarios {
 	font-size: 12px;
 	font-family: Arial, Helvetica, sans-serif;
 	padding: 2px;
+	height: 17px;
 }
 
 .titulo_legend_warning {
@@ -4971,36 +4973,3 @@ a {
     padding-bottom:5%;
 
 }
-
-
-
-/*.mensaje_contacto h2{
-    font-family: Arial;
-    font-size: 14px;
-    color:#fff;
-    padding-bottom:5px;
-
-}
-
-#contenido_mensaje{
-    background: none repeat scroll 0 0 #FFFFFF;
-    border-radius: 4px 4px 4px 4px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    color: #333333;
-    padding-top: 6px;
-
-}
-
-#contenido_mensaje p, h1{
-      padding-left:5px;
-        padding-bottom:5px;
-}*/
-
-
-
-
-/*  HASTA ACA*/
-
-
-
-
