--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/menu.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/menu.css
@@ -11,13 +11,12 @@ nav {
 	padding: 10px 0 0 0;
 	list-style: none;
 	background: #111;
-	background: -moz-linear-gradient(#444, #111);
-	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #111),
-		color-stop(1, #444) );
-	background: -webkit-linear-gradient(#444, #111);
-	background: -o-linear-gradient(#444, #111);
-	background: -ms-linear-gradient(#444, #111);
-	background: linear-gradient(#444, #111);
+	background: -moz-linear-gradient(#6C7880, #111);
+	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #111), color-stop(1, #6C7880) );
+	background: -webkit-linear-gradient(#6C7880, #111);
+	background: -o-linear-gradient(#6C7880, #111);
+	background: -ms-linear-gradient(#6C7880, #111);
+	background: linear-gradient(#6C7880, #111);
 	-moz-box-shadow: 0 2px 1px #9c9c9c;
 	-webkit-box-shadow: 0 2px 1px #9c9c9c;
 	box-shadow: 0 2px 1px #9c9c9c;
@@ -64,13 +63,12 @@ nav {
 	left: 0;
 	z-index: 99999;
 	background: #444;
-	background: -moz-linear-gradient(#444, #111);
-	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #111),
-		color-stop(1, #444) );
-	background: -webkit-linear-gradient(#444, #111);
-	background: -o-linear-gradient(#444, #111);
-	background: -ms-linear-gradient(#444, #111);
-	background: linear-gradient(#444, #111);
+	background: -moz-linear-gradient(#6C7880, #111);
+	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #111),color-stop(1, #6C7880) );
+	background: -webkit-linear-gradient(#6C7880, #111);
+	background: -o-linear-gradient(#6C7880, #111);
+	background: -ms-linear-gradient(#6C7880, #111);
+	background: linear-gradient(#6C7880, #111);
 	-moz-box-shadow: 0 0 2px rgba(255, 255, 255, .5);
 	-webkit-box-shadow: 0 0 2px rgba(255, 255, 255, .5);
 	box-shadow: 0 0 2px rgba(255, 255, 255, .5);
