--- a/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
@@ -1,5 +1,10 @@
 [% INCLUDE "intranet-top.inc" %]
 <script src="/intranet-tmpl/includes/admin/permisosCommon.js"></script>
+<script>
+    $(document).ready(function() {
+    	$("#usuario").focus();
+    }
+</script>
 
 <div class="titulos" >[% "Administraci&oacute;n de permisos" | i18n %]</div>
 
