--- a/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
@@ -149,6 +149,7 @@ function limpiar(){
                                                                     boton   => "boton_buscar",
                                                                     onClick => "buscarSancion();",
                                                                     title   => "[% 'Buscar' | i18n %]",
+                                                                    inline  => 1,
                                         ) ;
             [% END %]
         
@@ -157,6 +158,7 @@ function limpiar(){
                                                                     boton   => "boton_borrar",
                                                                     onClick => "limpiar();",
                                                                     title   => "[% 'Limpiar' | i18n %]",
+                                                                    inline  => 1,
                                         ) ;
             [% END %]
         </li>
