--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -1460,6 +1460,10 @@ ul.listado_a_izquierda {
 	margin-left: 7px;
 }
 
+.listaMenuBotones li button{
+    width: 300px;
+}
+
 .listaCondicionesHorizontales {
 	display: table;
 }
@@ -5535,7 +5539,7 @@ button.clean-gray {
 	padding: 8px 0;
 	text-align: center;
 	text-shadow: 0 1px 0 #eee;
-	width: 300px;
+	width: 150px;
 }
 
 button.clean-gray:hover {
@@ -5597,9 +5601,9 @@ button.thoughtbot {
 	box-shadow: inset 0px 0px 0px 1px rgba(255, 115, 100, 0.4), 0 1px 3px
 		#333333;
 	color: #fff;
-	font: bold 20px "helvetica neue", helvetica, arial, sans-serif;
+	font: bold 17px "helvetica neue", helvetica, arial, sans-serif;
 	line-height: 1;
-	padding: 12px 0 14px 0;
+	padding: 8px 0 10px 0;
 	text-align: center;
 	text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.8);
 	width: 300px;
