--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -145,6 +145,7 @@ $(document).ready(function() {
                                                                     boton   => "boton_buscar",
                                                                     onClick => "buscarUsuariosPotenciales();",
                                                                     title   => "[% 'Buscar' | i18n %]",
+                                                                    inline  => 1,
                                         ) ;
             [% END %]
             [% PERL %]
@@ -152,6 +153,7 @@ $(document).ready(function() {
                                                                     boton   => "boton_buscar",
                                                                     onClick => "Borrar();",
                                                                     title   => "[% 'Limpiar' | i18n %]",
+                                                                    inline  => 1,
                                         ) ;
             [% END %]
 
