[CHANGELOG] Se cambio el link administracion/tabls de referencia por su correspondiente, Control de autoridades

--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -411,7 +411,7 @@ body {
 	background: #EAEBED;
 	float: left;
 	width: 99%;
-	min-height: 600px;
+	min-height: 86%;
 	margin-top: 70px;
 	height: auto;
 }
