--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -306,7 +306,7 @@ fieldset legend {
 	width: 20em;
 }
 
-/* ULTIMO - CREANDO INTRANET-STRUCTURE */
+
 
 
 #contenido_login {
@@ -348,8 +348,6 @@ fieldset legend {
 	background-repeat: no-repeat;
 }
 
-/* ULTIMO */
-
 .idioma_y_login {
 	width: auto;
 	min-width: 25em;
@@ -358,7 +356,8 @@ fieldset legend {
 	margin-left: 2px;
 	margin-top: -145px;
 	padding-right: 20px;
-	font: bold 7px tahoma, arial, helvetica, sans-serif;
+	font-family: tahoma, arial, helvetica, sans-serif;
+    font-weight: bold;
 	text-align: right;
 	height: 5em;
 }
@@ -660,6 +659,9 @@ label.error_adv {
 	color: #35414F;
 	font-weight: bold;
 }
+
+
+
 
 .impar .disponible {
 	font-size: 10pt;
@@ -1065,6 +1067,7 @@ li {
 	width: 25px;
 	cursor: pointer;
 }
+
 
 .icon_renovar {
 	background: transparent url(../imagenes/iconos/renovar.png) no-repeat;
@@ -1553,6 +1556,9 @@ h2.trigger {
 	margin-bottom: 15px;
 }
 
+
+/* ULTIMO */
+
 .centro {
 	margin-bottom: 10px;
 	margin-left: 1%;
@@ -1975,6 +1981,11 @@ em {
 	opacity: 0.8;
 	background: url(../imagenes/shadow.png);
 }
+
+
+/* ULTIMO - CREANDO INTRANET-STRUCTURE */
+
+
 
 #tooltip.pretty h3 {
 	margin-bottom: 0.75em;
